src/raylib/raylib3.pas


  //------------------------------------------------------------------------------------
  // Shaders System Functions (Module: rlgl)
  // NOTE: This functions are useless when using OpenGL 1.1
  //------------------------------------------------------------------------------------

  // Shader loading/unloading functions
    LoadShader: function(const vsFileName: PUTF8Char; const fsFileName: PUTF8Char): TShader; cdecl;
    LoadShaderCode: function(const vsCode: PUTF8Char; const fsCode: PUTF8Char): TShader; cdecl;
    UnloadShader: procedure(shader: TShader); cdecl;

    GetShaderDefault: function: TShader; cdecl;
    GetTextureDefault: function: TTexture2D; cdecl;
    GetShapesTexture: function: TTexture2D; cdecl;
    GetShapesTextureRec: function: TRectangle; cdecl;
    SetShapesTexture: procedure(texture: TTexture2D; source: TRectangle); cdecl;

  // Shader configuration functions
    GetShaderLocation: function(shader: TShader; const uniformName: PUTF8Char): Integer; cdecl;
    SetShaderValue: procedure(shader: TShader; uniformLoc: Integer; const value: Pointer; uniformType: Integer); cdecl;
    SetShaderValueV: procedure(shader: TShader; uniformLoc: Integer; const value: Pointer; uniformType: Integer; count: Integer); cdecl;
    SetShaderValueMatrix: procedure(shader: TShader; uniformLoc: Integer; mat: TMatrix); cdecl;
    SetShaderValueTexture: procedure(shader: TShader; uniformLoc: Integer; texture: TTexture2D); cdecl;
    SetMatrixProjection: procedure(proj: TMatrix); cdecl;
    SetMatrixModelview: procedure(view: TMatrix); cdecl;
    GetMatrixModelview: function: TMatrix; cdecl;
    GetMatrixProjection: function: TMatrix; cdecl;

  // Texture maps generation (PBR)
  // NOTE: Required shaders should be provided
    GenTextureCubemap: function(shader: TShader; map: TTexture2D; size: Integer): TTexture2D; cdecl;
    GenTextureIrradiance: function(shader: TShader; cubemap: TTexture2D; size: Integer): TTexture2D; cdecl;
    GenTexturePrefilter: function(shader: TShader; cubemap: TTexture2D; size: Integer): TTexture2D; cdecl;
    GenTextureBRDF: function(shader: TShader; size: Integer): TTexture2D; cdecl;

  // Shading begin/end functions
    BeginShaderMode: procedure(shader: TShader); cdecl;
    EndShaderMode: procedure; cdecl;
    BeginBlendMode: procedure(mode: Integer); cdecl;
    EndBlendMode: procedure; cdecl;

  // VR control functions
    InitVrSimulator: procedure; cdecl;
    CloseVrSimulator: procedure; cdecl;
    UpdateVrTracking: procedure(camera: PCamera); cdecl;
    SetVrConfiguration: procedure(info: TVrDeviceInfo; distortion: TShader); cdecl;
    IsVrSimulatorReady: function: boolean; cdecl;
    ToggleVrMode: procedure; cdecl;
    BeginVrDrawing: procedure; cdecl;
    EndVrDrawing: procedure; cdecl;

  //------------------------------------------------------------------------------------
  // Audio Loading and Playing Functions (Module: audio)
  //------------------------------------------------------------------------------------

  // Audio device management functions
    InitAudioDevice: procedure; cdecl;
    CloseAudioDevice: procedure; cdecl;
    IsAudioDeviceReady: function: boolean; cdecl;
    SetMasterVolume: procedure(volume: Single); cdecl;

  // Wave/Sound loading/unloading functions
    LoadWave: function(const fileName: PUTF8Char): TWave; cdecl;
    LoadSound: function(const fileName: PUTF8Char): TSound; cdecl;
    LoadSoundFromWave: function(wave: TWave): TSound; cdecl;
    UpdateSound: procedure(sound: TSound; const data: Pointer; samplesCount: Integer); cdecl;
    UnloadWave: procedure(wave: TWave); cdecl;
    UnloadSound: procedure(sound: TSound); cdecl;
    ExportWave: procedure(wave: TWave; const fileName: PUTF8Char); cdecl;
    ExportWaveAsCode: procedure(wave: TWave; const fileName: PUTF8Char); cdecl;

  // Wave/Sound management functions
    PlaySound: procedure(sound: TSound); cdecl;
    StopSound: procedure(sound: TSound); cdecl;
    PauseSound: procedure(sound: TSound); cdecl;
    ResumeSound: procedure(sound: TSound); cdecl;
    PlaySoundMulti: procedure(sound: TSound); cdecl;
    StopSoundMulti: procedure; cdecl;
    GetSoundsPlaying: function: Integer; cdecl;
    IsSoundPlaying: function(sound: TSound): boolean; cdecl;
    SetSoundVolume: procedure(sound: TSound; volume: Single); cdecl;
    SetSoundPitch: procedure(sound: TSound; pitch: Single); cdecl;
    WaveFormat: procedure(wave: PWave; sampleRate: Integer; sampleSize: Integer; channels: Integer); cdecl;
    WaveCopy: function(wave: TWave): TWave; cdecl;
    WaveCrop: procedure(wave: PWave; initSample: Integer; finalSample: Integer); cdecl;
    GetWaveData: function(wave: TWave): PSingle; cdecl;

  // Music management functions
    LoadMusicStream: function(const fileName: PUTF8Char): TMusic; cdecl;
    UnloadMusicStream: procedure(music: TMusic); cdecl;
    PlayMusicStream: procedure(music: TMusic); cdecl;
    UpdateMusicStream: procedure(music: TMusic); cdecl;
    StopMusicStream: procedure(music: TMusic); cdecl;
    PauseMusicStream: procedure(music: TMusic); cdecl;
    ResumeMusicStream: procedure(music: TMusic); cdecl;
    IsMusicPlaying: function(music: TMusic): boolean; cdecl;
    SetMusicVolume: procedure(music: TMusic; volume: Single); cdecl;
    SetMusicPitch: procedure(music: TMusic; pitch: Single); cdecl;
    SetMusicLoopCount: procedure(music: TMusic; count: Integer); cdecl;
    GetMusicTimeLength: function(music: TMusic): Single; cdecl;
    GetMusicTimePlayed: function(music: TMusic): Single; cdecl;

  // AudioStream management functions
    InitAudioStream: function(sampleRate: Cardinal; sampleSize: Cardinal; channels: Cardinal): TAudioStream; cdecl;
    UpdateAudioStream: procedure(stream: TAudioStream; const data: Pointer; samplesCount: Integer); cdecl;
    CloseAudioStream: procedure(stream: TAudioStream); cdecl;
    IsAudioStreamProcessed: function(stream: TAudioStream): boolean; cdecl;
    PlayAudioStream: procedure(stream: TAudioStream); cdecl;
    PauseAudioStream: procedure(stream: TAudioStream); cdecl;
    ResumeAudioStream: procedure(stream: TAudioStream); cdecl;
    IsAudioStreamPlaying: function(stream: TAudioStream): boolean; cdecl;
    StopAudioStream: procedure(stream: TAudioStream); cdecl;
    SetAudioStreamVolume: procedure(stream: TAudioStream; volume: Single); cdecl;
    SetAudioStreamPitch: procedure(stream: TAudioStream; pitch: Single); cdecl;
    SetAudioStreamBufferSizeDefault: procedure(size: Integer); cdecl;

  //------------------------------------------------------------------------------------
  // Network (Module: network)
  //------------------------------------------------------------------------------------

  // IN PROGRESS: Check rnet.h for reference
  end;

var
  RayLib: TmncRayLib = nil;

function Vector2Of(X, Y: Single): TVector2;

implementation

function Vector2Of(X, Y: Single): TVector2;
begin
  Result := TVector2.Create(X, Y);
end;

{ TRectangle }

constructor TRectangle.Create(AX, AY, AWidth, AHeight: Single);
begin
  X:= AX;
  Y:= AY;
  Width := AWidth;
  Height := AHeight;
end;

{ TColor }

constructor TColor.Create(ARed, AGreen, ABlue, AAlpha: Byte);
begin
  Red := ARed;
  Green := AGreen;
  Blue := ABlue;
  Alpha := AAlpha;
end;

{ TVector2 }

constructor TVector2.Create(AX, AY: Single);
begin
  X := AX;
  Y := AY;
end;

{ TmncRayLib }
